--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="/l.png" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/source/source-code-pro.css" type="text/css" />
   <title>Nanometer UI</title>
 </head>
+
 <body>
   <div id="app"> </div>
-  <script src="/src/main.ts" type="module" ></script>
+  <script src="/src/main.ts" type="module"></script>
 </body>
+
 </html>
